cmake_minimum_required(VERSION 3.10)
project(mehmet_ali_yilmaz_c C)

set(CMAKE_C_STANDARD 99)

add_executable(mehmet_ali_yilmaz_c main.c pointers.c pointers.h intro.c intro.h intro_example.c intro_example.h io_examples.c io_examples.h if_else.c if_else.h number_guess.c number_guess.h for_examples.c for_examples.h loops.c loops.h functions_examples.c functions_examples.h loop_odev_cozumu.c loop_odev_cozumu.h user_defined_funcs2.c user_defined_funcs2.h string_ops.c string_ops.h array_examples.c array_examples.h array_hw.c array_hw.h pointers1.c pointers1.h one_d_pointers.c one_d_pointers.h dynamıc_pointers.c dynamıc_pointers.h dynamic_odev.c dynamic_odev.h structs_lesson.c structs_lesson.h bubble-sort.c bubble-sort.h linear_search.c linear_search.h stackImpl.c stackImpl.h queue.c queue.h linked-list.c linked-list.h student.h reverse_list.c reverse_list.h bst.c bst.h)